--- a/public/style.css
+++ b/public/style.css
@@ -598,6 +598,7 @@ button {
 }
 
 #output .itinerary-leg-header {
+    display: none;
     text-align: center;
     font-weight: bold;
     font-size: 1.1em;
@@ -611,6 +612,7 @@ button {
 }
 
 #output .itinerary-leg-header:first-of-type {
+    display: none;
     margin-top: 10px;
 }
 
